--- a/src/jinns_realism/main.tex
+++ b/src/jinns_realism/main.tex
@@ -22,6 +22,8 @@
 \newcommand{\projName}{Jinn's Realism For Farming Simulator}
 \newcommand{\projVersion}{v0.7-dev}
 
+\newcommand{\refPageref}[1]{\ref{#1} (p. \pageref{#1})}
+
 %-------------------------------------------------------------------------------
 
 \title{\projName{}\\ \projVersion{}}
@@ -29,6 +31,14 @@
 
 \maketitle
 \tableofcontents
+
+
+\section{TODO Before RC}
+\begin{itemize}
+\item Transfer price reference tables from notes to this document.
+\item Resolve TODOs in the body of the document.
+\end{itemize}
+
 
 \section{Mods}
 
@@ -44,6 +54,7 @@
     \item Hand-operated tree planting tools.
     \item Older tractors and equipment from 1990s to at least early 1960s or
       late 1950s (e.g.  Ferguson 35).
+    \item A mod that shows fuel per hour consumption.
     \item ``Crop Rotation''.
     \item ``Fruits Adjustment''.
     \item ``Grass Mowing''.
@@ -73,10 +84,10 @@ happen at the same time or neither. I.e. roll the check once for each.
 Reliability penalties from different sources are cumulative. E.g. A tractor
 stored in a shed which only has two walls, while dirty, with maintenance 20\%,
 paint 0\%, and was bought at used rating B would have additional minor failure
-probability of 14\% $(2\% + 3\% + 2\% + 4\% 3\% = 14\%)$ as per table
-\ref{table:equipment_fail_rates} (p. \pageref{table:equipment_fail_rates}).
+probability of 14\% $(2\% + 3\% + 2\% + 4\% + 3\% = 14\%)$ as per table
+\refPageref{tab:equipmentFailRates}.
 
-\TODO{This can and should be simplified to a single roll.}
+\TODO{Update rules text with the single roll mechanic explanation and examples.}
 
 \rowcolors{3}{tableColor1}{white}
 \begin{table}
@@ -87,7 +98,7 @@ probability of 14\% $(2\% + 3\% + 2\% + 4\% 3\% = 14\%)$ as per table
     \midrule
     Minor Breakdown  & 5\%             & $(d10 / 3)$ days\\
     Major Breakdown  & 15\%            & $(4 + d10)$ days \\
-    Full Maintenance & 5\%             & 1 day\\
+    Full Maintenance & $(1d10)$\%      & 1 day\\
     Repaint          & 2\%             & 2 days\\
     \bottomrule
   \end{tabular}
@@ -96,7 +107,7 @@ probability of 14\% $(2\% + 3\% + 2\% + 4\% 3\% = 14\%)$ as per table
 \rowcolors{3}{tableColor1}{white}
 \begin{table}
   \caption{Additional Equipment Failure Rates}
-  \begin{tabular}[t]{llcc}
+  \begin{tabular}{llcc}
     \toprule
     Source          & Type                  & Minor  & Major \\
     \midrule
@@ -125,19 +136,37 @@ probability of 14\% $(2\% + 3\% + 2\% + 4\% 3\% = 14\%)$ as per table
     Used rating     & D                     & 10\%   & 5\%\\
     \bottomrule
   \end{tabular}
-  \label{table:equipment_fail_rates}
+  \label{tab:equipmentFailRates}
 \end{table}
 
 
-\subsection{Harvest Quality and Storage Spoilage}
+\section{Harvest Quality and Storage Spoilage}
 Various factors can damage the growing crops and thus have a negative impact on
-the ammount and quality of the harvest of a crop (drought, pests, plague, etc.).
+the amount and quality of the harvest of a crop e.g. drought, pests, plague,
+etc.
 
-Roll 1d100 once per harvest season (e.g. just before harvesting a certain crop).
+The quality of the harvested crops in storage may also suffer over time from
+e.g. mould, pests, moisture or temperature control errors, etc.
+
+\begin{itemize}
+\item For harvest quality, roll 1d100 once per harvest season (e.g. just before
+  harvesting a certain crop) against table
+  \refPageref{tab:harvestQualityRolls} and note the resulting penalty which
+  must later be applied when selling the crops.
+\item For crop deterioration in storage events, roll once per month per
+  container against table \refPageref{tab:storageDeteriorationRolls} and note
+  the resulting penalty.
+\end{itemize}
+
+\TODO{Add explanation that penalties are recursively additive and do not
+  compound linearly, add one or two calculation examples to minimise confusion.}
 
 \rowcolors{3}{tableColor1}{white}
 \begin{table}
-  \caption{Harvest Quality Roll Table}
+\begin{minipage}{0.5\textwidth}
+\begin{center}
+  \caption{Harvest Quality Roll}
+  \rowcolors{3}{tableColor1}{white}
   \begin{tabular}{lcc}
     \toprule
     Score  & Income Penalty \\
@@ -149,5 +178,123 @@ Roll 1d100 once per harvest season (e.g. just before harvesting a certain crop).
     1      & $(60 + 4d10)\%$\\
     \bottomrule
   \end{tabular}
+  \label{tab:harvestQualityRolls}
+\end{center}
+\end{minipage}
+%
+\begin{minipage}{0.5\textwidth}
+\begin{center}
+  \caption{Storage Deterioration Roll}
+  \rowcolors{3}{tableColor1}{white}
+  \begin{tabular}{lcc}
+    \toprule
+    Score  & Income Penalty \\
+    \midrule
+    3-10   & $(1d10)\%$\\
+    2      & $(10 + 1d10)\%$\\
+    1      & $(20 + 1d10)\%$\\
+    \bottomrule
+  \end{tabular}
+  \label{tab:storageDeteriorationRolls}
+\end{center}
+\end{minipage}
 \end{table}
+
+
+\section{Buying Equipment}
+New equipment is always available to buy, but the price may fluctuate a bit.
+Used equipment may be harder to find, especially in the desired condition.
+
+When buying used equipment, first roll 1d100 against table
+\refPageref{tab:usedEquipmentOffers} to determine how many offers there are
+available on the market, then roll 1d10 against the table
+\refPageref{tab:usedEquipmentOfferRatings} to determine the condition of
+equipment on sale for each offer.
+
+The results are valid only for the month they are rolled in, so if you'd like to
+try again you can do so next month, but if you do like the results make sure to
+grab what's on offer before the end of the month. The roll can be made once per
+model of equipment in question, so searching for a similar model in case initial
+results are not satisfactory is a valid strategy, this however may result in
+more opportunities than plausible if the user has many similar mods installed so
+the user is encouraged to limit the number of attempts to what looks plausible
+given current market conditions.
+
+The general wear and tear condition of equipment is important when performing
+reliability check calculation and will fall into one of the categories listed
+below.
+\begin{itemize}
+\item N -- Equipment was bought brand new, has spent less than 5 years on the
+  farm and has accumulated less than 100 hours.
+\item A -- The machine has seen little work with the previous owner or,
+  especially in case of historical equipment, has been fully refurbished to near
+  factory-new state. (A modern tractor would probably have accumulated between
+  100 and 1000 hours).
+\item B -- The machine has seen regular work for some time now, but is well
+  looked after, no obvious signs of rust, etc. (A modern tractor would probably
+  have accumulated between 1000 and 6000 hours).
+\item C -- The machine has seen considerable amount of work for many years, or
+  has only seen basic care for a few years, may have some visible signs of wear.
+  (A modern tractor would probably have accumulated between 6000 and 12000
+  hours.)
+\item D -- The machine has been used and abused for many years, it may still be
+  fit for work, but maintenance issues should be expected. This piece of
+  equipment wold probably not look out of place in a scrap yard.
+\end{itemize}
+
+\begin{table}
+\begin{minipage}{0.5\textwidth}
+\begin{center}
+  \caption{Used Equipment Availability}
+  \rowcolors{3}{tableColor1}{white}
+  \begin{tabular}{lc}
+    \toprule
+    Score  & Offers Available\\
+    \midrule
+    1-25   & 0\\
+    26-50  & 1\\
+    51-75  & 2\\
+    76-100 & 3\\
+    \bottomrule
+  \end{tabular}
+  \label{tab:usedEquipmentOffers}
+\end{center}
+\end{minipage}%
+%
+\begin{minipage}{0.5\textwidth}
+\begin{center}
+  \caption{Used Equipment Condition}
+  \rowcolors{3}{tableColor1}{white}
+  \begin{tabular}{lc}
+    \toprule
+    Score  & Condition\\
+    \midrule
+    1-2    & A\\
+    3-5    & B\\
+    6-8    & C\\
+    9-10   & D\\
+    \bottomrule
+  \end{tabular}
+  \label{tab:usedEquipmentOfferRatings}
+\end{center}
+\end{minipage}
+\end{table}
+
+
+\section{Additional Expenses and Time}
+\begin{description}
+\item[Fuel] Suggested price \pounds{}1.50 (avg. price in UK in 2023-08). Mods
+  providing varied size fuel containers for purchase as ``pallets'' are quite
+  helpful, at least in the beginning of the game.
+\item[Personal expenses] Roll 4d100 at end of each month. This represents
+  personal expenses like food, clothing, home utilities, etc. Feel free to
+  modify this roll in accordance to role-play, e.g. one dice can be subtracted
+  to represent replacement of big portion of the diet with produce grown on
+  farm, 2 dice to represent home grown diet and more conservative lifestyle,
+  etc.
+\item[Travel Distance] Consider the fuel needed for a trip to town, market, etc.
+  Suggested distance is 25km (one way). This is to add some depth to the need
+  for trailers and efficient tractors or trucks for delivery of goods. A mod
+  that shows fuel consumption rate is especially helpful for this.
+\end{description}
 \end{document}
