added todo point

--- a/src/jinns_realism/main.tex
+++ b/src/jinns_realism/main.tex
@@ -37,6 +37,8 @@
 \begin{itemize}
 \item Transfer price reference tables from notes to this document.
 \item Resolve TODOs in the body of the document.
+\item Review probability balance in all tables. Esp. harvest and storage
+  penalties.
 \end{itemize}
 
 
