--- a/src/jinns_realism/main.tex
+++ b/src/jinns_realism/main.tex
@@ -79,19 +79,18 @@ The older the model of the equipment used, the higher the chance of failure.
 Chance of failure should also increase depending on what condition the equipment
 was when it was bought.
 
-Roll 1d100, if the result is equal or than less the failure chance, then the
-equipment has suffered a failure and needs to be repaired before it can be used.
-
-Major and minor failures can happen independently of each other i.e. both can
-happen at the same time or neither. I.e. roll the check once for each.
-
 Reliability penalties from different sources are cumulative. E.g. A tractor
-stored in a shed which only has two walls, while dirty, with maintenance 20\%,
+stored in a shed which only has two walls, while dirty, with maintenance 30\%,
 paint 0\%, and was bought at used rating B would have additional minor failure
-probability of 14\% $(2\% + 3\% + 2\% + 4\% + 3\% = 14\%)$ as per table
+probability of 11\% $(2\% + 3\% + 2\% + 1\% + 3\% = 11\%)$ as per table
 \refPageref{tab:equipmentFailRates}.
 
-\TODO{Update rules text with the single roll mechanic explanation and examples.}
+To carry out an equipment failure check, first calculate the minor and major
+failure probability scores and add them together to get your \textit{sum failure
+  threshold} and then roll 1d100. If the dice roll comes out to a number equal
+or less than the \textit{major failure} rate - a major failure has occurred,
+otherwise if the roll is equal to or less than the \textit{sum failure
+  threshold} then a minor failure has occurred.
 
 \rowcolors{3}{tableColor1}{white}
 \begin{table}
@@ -113,34 +112,34 @@ probability of 14\% $(2\% + 3\% + 2\% + 4\% + 3\% = 14\%)$ as per table
 \rowcolors{3}{tableColor1}{white}
 \begin{table}
 \begin{center}
-  \caption{Additional Equipment Failure Rates}
-  \begin{tabular}{llcc}
+  \caption{Equipment Failure Rates}
+  \begin{tabular}{llccc}
     \toprule
-    Source          & Type                  & Minor  & Major \\
+    Source          & Type                  & Minor  & Major & Sum. \\
     \midrule
-    Technology era  & <1960s                & 14\%   & 8\%          \\
-    Technology era  & 1960s                 &  9\%   & 6\%          \\
-    Technology era  & 1970s                 &  8\%   & 5\%          \\
-    Technology era  & 1980s                 &  7\%   & 4\%          \\
-    Technology era  & 1990s                 &  6\%   & 3\%          \\
-    Technology era  & 2000s                 &  5\%   & 2\%          \\
-    Technology era  & 2010/14               &  4\%   & 1\%          \\
-    Technology era  & 2015/19               &  3\%   & 1\%          \\
-    Technology era  & 2020s                 &  2\%   & 1\%          \\
-    Garage          & None (outside)        &  5\%   & 3\%   \\
-    Garage          & Roof only             &  3\%   & 2\%   \\
-    Garage          & 2 side shed           &  2\%   & 1\%   \\
-    Garage          & 3 side shed           &  1\%   & 1\%   \\
-    Garage          & Closed garage         &  0\%   & 0\%   \\
-    Dirt            & Visibly dirty (>75\%) &  3\%   & 2\%\\
-    Maintenance     & <25\%                 &  2\%   & 1\%\\
-    Maintenance     & 0\%                   &  3\%   & 2\%\\
-    Paint condition & <25\%                 &  1\%   & 0\%\\
-    Paint condition & 0\% + outside         &  4\%   & 2\%\\
-    Used rating     & A                     &  1\%   & 1\%\\
-    Used rating     & B                     &  3\%   & 1\%\\
-    Used rating     & C                     &  5\%   & 2\%\\
-    Used rating     & D                     & 10\%   & 5\%\\
+    Technology era  & <1960s                & 14\%   & 8\%   & 22\% \\
+    Technology era  & 1960s                 &  9\%   & 6\%   & 15\% \\
+    Technology era  & 1970s                 &  8\%   & 5\%   & 13\% \\
+    Technology era  & 1980s                 &  7\%   & 4\%   & 11\% \\
+    Technology era  & 1990s                 &  6\%   & 3\%   & 9\%  \\
+    Technology era  & 2000s                 &  5\%   & 2\%   & 7\%  \\
+    Technology era  & 2010/14               &  4\%   & 1\%   & 5\%  \\
+    Technology era  & 2015/19               &  3\%   & 1\%   & 4\%  \\
+    Technology era  & 2020s                 &  2\%   & 1\%   & 3\%  \\
+    Garage          & None (outside)        &  5\%   & 3\%   & --   \\
+    Garage          & Roof only             &  3\%   & 2\%   & --   \\
+    Garage          & 2 side shed           &  2\%   & 1\%   & --   \\
+    Garage          & 3 side shed           &  1\%   & 1\%   & --   \\
+    Garage          & Closed garage         &  0\%   & 0\%   & --   \\
+    Dirt            & Visibly dirty (>75\%) &  3\%   & 2\%   & --   \\
+    Maintenance     & <25\%                 &  2\%   & 1\%   & --   \\
+    Maintenance     & 0\%                   &  3\%   & 2\%   & --   \\
+    Paint condition & <25\%                 &  1\%   & 0\%   & --   \\
+    Paint condition & 0\% + outside         &  4\%   & 2\%   & --   \\
+    Used rating     & A                     &  1\%   & 1\%   & --   \\
+    Used rating     & B                     &  3\%   & 1\%   & --   \\
+    Used rating     & C                     &  5\%   & 2\%   & --   \\
+    Used rating     & D                     & 10\%   & 5\%   & --   \\
     \bottomrule
   \end{tabular}
   \label{tab:equipmentFailRates}
