some research into used combine harvester prices

--- a/src/jinns_realism/main.tex
+++ b/src/jinns_realism/main.tex
@@ -238,6 +238,10 @@ more opportunities than plausible if the user has many similar mods installed so
 the user is encouraged to limit the number of attempts to what looks plausible
 given current market conditions.
 
+\note{Somewhat unexpected that 1970-2009 harvesters average at roughly the same
+  price per HP no matter which decade they're from as long as they're in roughly
+  the same (operational) state of repair, I only looked at 3 samples from each
+  decade though. Sources: www.farmmachinerylocator.co.uk}
 
 \subsection{Hire}
 
@@ -313,6 +317,12 @@ of equipment wear can be categorised as follows.
     $<10m^3$  & 800       & 1,500\\
     $10-30m^3$& 650       & 1,250\\
     $>30m^3$  & 600       & 700\\
+    \midrule
+    \midrule
+    \multicolumn{3}{c}{Combine Harvesters}\\
+    Era       & Per HP    &\\
+    \midrule
+    1970-2009 & 210       &\\
     \bottomrule
   \end{tabular}
   \end{center}
@@ -428,3 +438,11 @@ of equipment wear can be categorised as follows.
   that shows fuel consumption rate is especially helpful for this.
 \end{description}
 \end{document}
+
+
+\section{Sources}
+Equipment specification sources from multiple locations on the web
+e.g. tractordata.com, www.lectura-specs.com.
+
+Equipment prices sourced mainly from following websites: agriaffaires.co.uk,
+www.farmmachinerylocator.co.uk, autotrader.co.uk.
