updated TODO list

--- a/src/jinns_realism/main.tex
+++ b/src/jinns_realism/main.tex
@@ -38,6 +38,7 @@
 \item Resolve TODOs in the body of the document.
 \item Review probability balance in all tables. Esp. harvest and storage
   penalties.
+\item Review required & recommended mods list.
 \item There's a large price jump between tractors from 1990s and 2000s,
   should double-check market info for 1980s tractors and either adjust price or
   reflect the difference in other game system areas e.g. reliability.
