Manual labor time loss suggestion, section for some quick notes.

--- a/src/jinns_realism/main.tex
+++ b/src/jinns_realism/main.tex
@@ -19,7 +19,7 @@
 
 \newcommand{\textbi}[1]{\textbf{\textit{#1}}}
 
-\newcommand{\projName}{Jinn's Realism For Farming Simulator}
+\newcommand{\projName}{Jinn's Unrealism For Farming Simulator}
 \newcommand{\projVersion}{v0.7-dev}
 
 \newcommand{\refPageref}[1]{\ref{#1} (p. \pageref{#1})}
@@ -311,7 +311,7 @@ of equipment wear can be categorised as follows.
   \begin{minipage}{0.5\textwidth}
   \begin{center}
   \begin{tabular}{lcc}
-    \toprule 
+    \toprule
     \multicolumn{3}{c}{Tipper Trailers (Price in \pounds)}\\
     Capacity  & Per Tonne & Per $m^3$\\
     \midrule
@@ -437,9 +437,28 @@ of equipment wear can be categorised as follows.
   Suggested distance is 25km (one way). This is to add some depth to the need
   for trailers and efficient tractors or trucks for delivery of goods. A mod
   that shows fuel consumption rate is especially helpful for this.
+\item[Manual Labour] Lack of time-saving equipment will cause additional
+  delays, which may be fun to simulate. E.g. A cheaper trailer without a tipping
+  function may add 5 minutes of work per $m^3$ when unloading at delivery.
 \end{description}
-\end{document}
 
+\section{Quick Notes}
+
+\begin{itemize}
+\item Modification and Accessory Cost
+  \begin{itemize}
+  \item Wheels in good order for older small tractors (1960 and older) can
+    realistically be acquired at \textsterling{}150 a piece for the rear and
+    \textsterling{}75 for the front, tyres go for roughly the same
+    price. Depending on the model getting all the bits for a twin-wheel rear
+    setup can add another \textsterling{}150 to the total. So getting
+    everything for a twin-rear wheel setup can come up to roughly
+    \textsterling{}750\footnote{Sourced from various online markets, you would
+      probably get a better deal if you're lucky or well connected.} ($
+      \textsterling{}150_{wheel} \times 2 + \textsterling{}150_{tyre} \times 2 +
+      \textsterling{}150_{mod parts}$)
+  \end{itemize}
+\end{itemize}
 
 \section{Sources}
 Equipment specification sources from multiple locations on the web
@@ -447,3 +466,5 @@ e.g. tractordata.com, www.lectura-specs.com.
 
 Equipment prices sourced mainly from following websites: agriaffaires.co.uk,
 www.farmmachinerylocator.co.uk, autotrader.co.uk.
+
+\end{document}
